--- a/wiki/FlashFlowFactory.wiki
+++ b/wiki/FlashFlowFactory.wiki
@@ -40,7 +40,7 @@ All classes related to the framework are inside package `nl.stroep.flashflowfact
 
 === Step 1: Create flashfile  ===
 
-Just to start, create a new flash file. Save it and place the framework files next to the flash, or create your own setup where the framework is included. Make sure you include TweenLite and SWFAddress too. Now we need to design some pages.
+Just to start, create a new flash file. Save it and place the flashflowframework files next to the flash, or create your own setup where the framework is included. Make sure you include TweenLite and SWFAddress too. Now we need to design some pages.
 
 === Step 2: Create Pages ===
 
@@ -208,7 +208,7 @@ If you now run the flashfile, you should have a website with buttons, transition
 
 = Navigation Button =
 
-The framework includes a `NavigationButton` class. This is a semi-intelligent `MovieClip`.  Just extend `NavigationButton` and the features below are enabled.
+Flashflowframework includes a `NavigationButton` class. This is a semi-intelligent `MovieClip` with smart states and an uber-clickfunction.  Just extend `NavigationButton` and the features below are enabled.
 
 === Smart states ===
 You can add framelabels called _'out', 'over', 'down' and/or 'active'_. The button will automatically add the needed events for that, and `gotoAndPlay()` to that framelabel. If you extend the class, you can basically add your button-state-animation and it should work Do not forget to set a `stop()` commando at the end of each button-state-animation. 
